@@ -1,2 +1,5 @@
+{{version}} {{date}}
+    - Data::TUID now installs and works on non-*nix systems
+
 0.011 Wednesday June 10 09:52:38 PDT 2009:
     - Initial release
